--- a/package.json
+++ b/package.json
@@ -18,8 +18,14 @@
     "next": "13.4.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
+    "react-datepicker": "^4.11.0",
     "react-dom": "18.2.0",
+    "react-select": "^5.7.3",
+    "swiper": "^9.3.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@types/react-datepicker": "^4.11.2"
   }
 }
