--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -18,6 +18,7 @@
     "next": "13.4.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
+    "react-burger-menu": "^3.0.9",
     "react-datepicker": "^4.11.0",
     "react-dom": "18.2.0",
     "react-select": "^5.7.3",
@@ -26,6 +27,7 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@types/react-burger-menu": "^2.8.3",
     "@types/react-datepicker": "^4.11.2"
   }
 }
